// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling
  $2.35
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  Viewing 
  23
   
  expenses
   totalling
  $23,456.34
</div>
`;
